--- a/index.html
+++ b/index.html
@@ -6,41 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="estilos/celular.css" media="screen and (max-width: 768px)">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen">
-    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
-        <section>
-            <img src="imagens/building.jpg" alt="Prédio">
-            <h2>Login</h2>
-            <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-            <form action="#" method="post" autocomplete="on">
-                <div class="data">
-                    <span class="material-symbols-outlined">
-                        vpn_key
-                    </span>
-                    <label for="email"></label>
-                    <input type="email" name="email" id="email" required placeholder=" seu e-mail" autocomplete="email">
-                </div>
+        <section id="login">
+            <div id="imagem">
+            </div>
 
-                <div class="data">
-                    <span class="material-symbols-outlined">
-                        person
-                    </span>
-                    <label for="pass"></label>
-                    <input type="password" name="pass" id="pass" required placeholder=" sua senha" minlength="8" maxlength="20">
-                </div>
-
-                <div class="logar">
-                    <input type="submit" value="Entrar">
-                </div>
-
-                <div class="senha">
-                    <input type="submit" value="Esqueci a senha &#x1F582;">
-                </div>
-            </form>
+            <div id="formulario">
+                <h2>Login</h2>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="#" method="post" autocomplete="on">
+                    <div class="data">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                        </span>
+                        <label for="email"></label>
+                        <input type="email" name="email" id="email" required placeholder=" seu e-mail" autocomplete="email">
+                    </div>
+                    <div class="data">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                        <label for="pass"></label>
+                        <input type="password" name="pass" id="pass" required placeholder=" sua senha" minlength="8" maxlength="20">
+                    </div>
+                    <div id="entrar">
+                        <input type="submit" value="Entrar">
+                    </div>
+                    <div id="senha">
+                        <input type="submit" value="Esqueci a senha &#x1F582;">
+                    </div>
+                </form>
+            </div>
         </section>
     </main>
 </body>
